--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
-platform = espressif32@4.2.0
-board = esp32doit-devkit-v1
+[env:seeed_xiao_esp32c3]
+platform = espressif32
+board = seeed_xiao_esp32c3
 framework = arduino
-monitor_rts = 0
-monitor_dtr = 0 
-monitor_speed = 9600
-upload_port = COM8
-; monitor_port = COM4
+monitorspeed = 9600
+lib_deps = 
+	madhephaestus/ESP32Servo@^0.12.1
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+upload_port = COM19
