--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,5 @@ framework = arduino
 monitor_rts = 0
 monitor_dtr = 0 
 monitor_speed = 9600
-upload_port = COM8
+; upload_port = COM8
 ; monitor_port = COM4
